# CoreFW

./: .gitignore  configure.ac
src/: Makefile  array.c  array.h  autoreleasepool.c  autoreleasepool.h  bool.c  bool.h  box.c  box.h  class.c  class.h  corefw.h  double.c  double.h  file.c  file.h  hash.h  int.c  int.h  map.c  map.h  object.c  object.h  range.c  range.h  refpool.c  refpool.h  stream.c  stream.h  string.c  string.h  tcpsocket.c  tcpsocket.h
tests/: tests.c
