AC_INIT(CoreFW, 0.1, js@nil.im)
AC_CONFIG_SRCDIR(src)
AC_CONFIG_AUX_DIR(build-aux)
AC_CONFIG_MACRO_DIR(build-aux/m4)

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_INSTALL

AS_IF([test x"$GCC" = x"yes"], [
	CFLAGS="$CFLAGS -Wall -Werror -pipe -std=c99 -pedantic"
])

BUILDSYS_SHARED_LIB
BUILDSYS_INIT

AC_CONFIG_FILES(buildsys.mk)
AC_OUTPUT
